<resources>
    <string name="app_name">OSAGO Calculator</string>
    <string name="Text_head_main">Калькулятор ОСАГО</string>
    <string name="Button_bottom_main_osago">Рассчитать ОСАГО</string>
    <string name="Button_dialog_next">Далее</string>
    <string name="koff_How_many_years_there_were_no_accidents">Сколько лет не было аварий</string>
    <string name="koff_Min_driving_experience">Минимальный стаж водителей</string>
    <string name="koff_Age_of_drivers">Возраст младшего из водителей</string>
    <string name="koff_How_many_drivers">Сколько водителей</string>
    <string name="koff_car_power">Мощность автомобиля</string>
    <string name="koff_city">Город регистраций собственника</string>
    <string name="koff_BT_name">БТ</string>
    <string name="hint_BT">(Базорый тариф)</string>
    <string name="Text_BT">Устанавливает страховая компания</string>
    <string name="sum_BT">2 754 - 4 432</string>
    <string name="koff_KM">KM</string>
    <string name="hint_KM">(Коэфф. мощности)</string>
    <string name="Text_KM">Чем мощнее автомобиль, тем дороже страховой полис</string>
    <string name="sum_KM">0,6 - 1,6</string>
    <string name="koff_KT">KT</string>
    <string name="hint_KT">(Территориальный коэфф.)</string>
    <string name="Text_KT">Определяется по прописке\nсобственника автомобиля</string>
    <string name="sum_KT">0,64 - 1,99</string>
    <string name="koff_KBM">KБМ</string>
    <string name="hint_KBM">(коэфф. безаварийности)</string>
    <string name="Text_KBM">Учитывается только самый высокий коэффицент из всех водителей</string>
    <string name="sum_KBM">0,5 - 2,45</string>
    <string name="koff_KO">KO</string>
    <string name="hint_KO">(коэфф. возраст/стаж)</string>
    <string name="Text_KO">Чем больше возраст и стаж у вписанного в полис водителя, тем дешевле будет полис</string>
    <string name="sum_KO">0,90 - 1,93</string>
    <string name="koff_KVS">KВС</string>
    <string name="hint_KVS">(коэфф. возраст/стаж)</string>
    <string name="Text_KVS">Полис с ограниченным списком водителей будет стоить дешевле</string>
    <string name="sum_KVS">1 или 1,99</string>
    <string name="Text_koff">Ваши коэффиценты</string>
    <string name="Text_noDrivers">Без ограничений</string>
    <string name="BT">BT</string>
    <string name="KM">KM</string>
    <string name="KT">KT</string>
    <string name="KBM">KBM</string>
    <string name="KVS">KVS</string>
    <string name="KO">KO</string>

    <string name="hint_dialog_city">Введите город</string>
    <string name="hint_dialog_power">Введите мощность</string>
    <string name="hint_dialog_drivers">Введите колличество водителей</string>
    <string name="hint_dialog_old_drivers">Введите возраст младшего из водителей</string>
    <string name="hint_dialog_min_staj">Введите минимальный стаж</string>
    <string name="hint_dialog_no_accidents">Введите сколько лет небыло аварий</string>
    <string name="text_button_dialog">Подтвердить</string>
    <string name="action_bar_text">Расчет цены полиса</string>


    <string name="x">х</string>

    <string-array name="city">
        <item>Москва</item>
        <item>Магнитогорск</item>
        <item>Магадан</item>
        <item>Новосибирск</item>
        <item>Барнаул</item>
        <item>Славгород</item>
        <item>Рязань</item>
        <item>Казань</item>
        <item>Хабаровск</item>
        <item>Сочи</item>
        <item>Омск</item>
        <item>Томск</item>
        <item>Санкт-питербург</item>
    </string-array>

    <string-array name="power">
        <item>от 1 до 50</item>
        <item>от 51 до 99</item>
        <item>от 100 до 150</item>
        <item>от 151 до 200</item>
        <item>более 200</item>
    </string-array>

    <string-array name="driver">
        <item>Без ограничений</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="old">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
    </string-array>

    <string-array name="min_staj">
        <item>Без стажа</item>
        <item>Меньше одного года</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="crash">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>


</resources>